--- a/fig/tikz/geometri/basal.tex
+++ b/fig/tikz/geometri/basal.tex
@@ -43,7 +43,7 @@
 \draw[thick] (0,0,0) -- (0,-0.2,0);
 %
 \end{tikzpicture}
-  \captionof{figure}{Punkterne $A,B,C,D,E,F,G$ og $H$ er basal løsninger, hvoraf $A,B,C,E$ og $G$ alle er basal mulige løsninger.}
-  \label{fig:fig:basale}
+  \captionof{figure}{Punkterne $A,B,C,D,E,F,G$ og $H$ er basale løsninger, hvoraf $A,B,C,E$ og $G$ alle er basale mulige løsninger.}
+  \label{fig:basale}
 \end{center}
 %
