--- a/fig/tikz/geometri/ekstrema.tex
+++ b/fig/tikz/geometri/ekstrema.tex
@@ -43,7 +43,8 @@
 %
 %
   \end{tikzpicture}
-  \caption{En polyede $\mathcal{P}$, hvor $\textbf{x}$ er et ekstremumspunkt, da der ikke findes vektorer $\textbf{y}$ og $\textbf{z}$ sådan at $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda) \mathbf{z}$. Vektor $\textbf{w}$ er i modsætning ikke et ekstremumspunkt, da der findes $\textbf{v}$ og $\textbf{u}$, sådan at $\mathbf{w}=\lambda\mathbf{v}+(1-\lambda) \mathbf{u}$.}
+  \caption{Et polyeder $\mathcal{P}$, hvor $\textbf{x}$ er et ekstremumspunkt, da der ikke findes vektorer $\textbf{y}$ og $\textbf{z}$, sådan at $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda) \mathbf{z}$.
+Vektor $\textbf{w}$ er i modsætning ikke et ekstremumspunkt, da der findes $\textbf{v}$ og $\textbf{u}$, sådan at $\mathbf{w}=\lambda\mathbf{v}+(1-\lambda) \mathbf{u}$.}
   \label{fig:ekstrema}
 \end{figure}
 %
