--- a/fig/tikz/geometri/hjorne.tex
+++ b/fig/tikz/geometri/hjorne.tex
@@ -43,7 +43,8 @@
 \filldraw [black] (-9,2) circle (0pt);
 %
   \end{tikzpicture}
-  \caption{En polyede $\mathcal{P}$, hvor $\textbf{x}$ er et hjørnepunkt, da hyperplanet kun rammer $\mathcal{P}$ i $\mathbf{x}$. Vektoren $\textbf{w}$ er i modsætning ikke hjørnepunkt, da hyperplanet rammer $\mathcal{P}$ i flere punkter end $\mathbf{w}$.}
+  \caption{Et polyeder $\mathcal{P}$, hvor $\textbf{x}$ er et hjørnepunkt, da det er det eneste punkt, som både er i hyperplanet og $\mathcal{P}$.
+Vektoren $\textbf{w}$ er i modsætning ikke et hjørnepunkt, da hyperplanet skærer $\mathcal{P}$ i flere punkter end $\mathbf{w}$.}
   \label{fig:julieermegaseeeeeeeeeej}
 \end{figure}
 %
