--- a/fig/tikz/geometri/hyperplan_r2.tex
+++ b/fig/tikz/geometri/hyperplan_r2.tex
@@ -30,6 +30,6 @@
 \filldraw[black] (1.6,2.2) circle (0pt) node[anchor=west] {$\mathbf{a}$};
 %
 \end{tikzpicture}
-  \captionof{figure}{Et hyperplan $\mathbf{a}^T \mathbf{x}=b$, og to halvrum, markeret med blå for den øvre halvrum $\mathbf{a}^T \mathbf{x} < b$ og rød for den nedre halvrum $\mathbf{a}^T \mathbf{x} > b$.}
+  \captionof{figure}{Et hyperplan $\mathbf{a}^T \mathbf{x}=b$ og to halvrum markeret med blå for det øvre halvrum $\mathbf{a}^T \mathbf{x} < b$ og rød for det nedre halvrum $\mathbf{a}^T \mathbf{x} > b$.}
   \label{fig:Graf123}
 \end{center}
