--- a/fig/tikz/geometri/konveks.tex
+++ b/fig/tikz/geometri/konveks.tex
@@ -55,6 +55,6 @@
 %
 %
 \end{tikzpicture}
-  \captionof{figure}{En konveks mængde markeret med blå og en ikke-konveks mængde markeret med rød.}
+  \captionof{figure}{En konveks mængde markeret med blå, der indeholder alle elementer mellem et vilkårligt $\textbf{u}$ og $\textbf{v}$ og en ikke-konveks mængde markeret med rød, som ikke indeholder alle elementer mellem et vilkårligt $\textbf{u}$ og $\textbf{v}$.}
   \label{fig:neej1}
 \end{center}
