--- a/fig/tikz/geometri/polyede2.tex
+++ b/fig/tikz/geometri/polyede2.tex
@@ -27,7 +27,7 @@
 %
 % Navngivning og prik til at gøre det pænt 
 % -------------------------------------------------------
-\draw[black] (0.91,0.96,1.2) circle (0pt) node[anchor=west] {$\mathcal{P}$};
+\draw[black] (0.91,0.96,1.2) circle (0pt) node[anchor=west] {$\mathcal{P}_1$};
 \draw[black] (0,0,0.7) circle (0pt);
 % 
 % 
@@ -40,7 +40,7 @@
 %
 %
 \end{tikzpicture}
-  \captionof{figure}{En polyede $\mathcal{P}$ markeret med blå i $\R^2$.}
+  \captionof{figure}{Et polyeder $\mathcal{P}_1 \in \R^2$ markeret med blå.}
   \label{fig:nej2}
 \end{center}
 %
