--- a/fig/tikz/geometri/polyede3.tex
+++ b/fig/tikz/geometri/polyede3.tex
@@ -30,7 +30,7 @@
 %
 % Navngivning og prik til at gøre det pænt 
 % -------------------------------------------------------
-\draw[black] (0.91,0.96,1.2) circle (0pt) node[anchor=west] {$\mathcal{P}$};
+\draw[black] (0.91,0.96,1.2) circle (0pt) node[anchor=west] {$\mathcal{P}_2$};
 % 
 % 
 % Koordinatssystem 
@@ -44,7 +44,7 @@
 %
 %
 \end{tikzpicture}
-  \captionof{figure}{En polyede $\mathcal{P}$ markeret med blå i $\R^3$.}
+  \captionof{figure}{Et polyeder $\mathcal{P}_2 \in \R^3$ markeret med blå.}
   \label{fig:nej3}
 \end{center}
 %
